--- a/util/sugar/src/scss/core/class/_all.scss
+++ b/util/sugar/src/scss/core/class/_all.scss
@@ -1,6 +1,5 @@
 @import "classes";
-@import "init";
-@import "register-class";
+@import 'class-match-namespace';
 
 @import "helper/all";
 @import "icons/all";
