--- a/util/sugar/src/scss/core/class/helper/_all.scss
+++ b/util/sugar/src/scss/core/class/helper/_all.scss
@@ -1,14 +1,18 @@
 @import 'block';
 @import 'clear';
 @import 'clearfix';
+@import 'color';
 @import 'display';
+@import 'filter';
 @import 'font';
+@import 'margin';
 @import 'media';
+@import 'padding';
 @import 'pointer';
 @import 'position';
 @import 'pull';
 @import 'ratio';
-@import 'settings-based';
 @import 'size';
 @import 'text';
+@import 'transition';
 @import 'transmation';
