--- a/util/sugar/src/scss/core/map/_all.scss
+++ b/util/sugar/src/scss/core/map/_all.scss
@@ -1,6 +1,7 @@
 @import "dash-to-map";
 @import 'map-deep-values';
 @import 'map-extend';
+@import 'map-filter';
 @import 'map-filter-by-namespace';
 @import 'map-to-css-variables';
 @import 'map-flatten';
