--- a/util/sugar/src/scss/core/class/helper/_clear.scss
+++ b/util/sugar/src/scss/core/class/helper/_clear.scss
@@ -1,6 +1,5 @@
-@mixin register-helper-clear() {
-
-  @include register-class(clear-left, "sugar.helper.clear.left") {
+@mixin classes-helper-clear() {
+  @if class-match-namespace("sugar.helper.clear.left") {
     /**
     * @name 		clear-left
     * @namespace       scss.core.class.helper
@@ -17,9 +16,11 @@
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    clear: left;
+    .clear-left {
+      clear: left;
+    }
   }
-  @include register-class(clear-right, "sugar.helper.clear.right") {
+  @if class-match-namespace("sugar.helper.clear.right") {
     /**
     * @name 		clear-right
     * @namespace       scss.core.class.helper
@@ -36,9 +37,12 @@
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    clear: right;
+    .clear-right {
+      clear: right;
+    }
   }
-  @include register-class(clear, "sugar.helper.clear.both") {
+
+  @if class-match-namespace("sugar.helper.clear.both") {
     /**
     * @name 		clear
     * @namespace       scss.core.class.helper
@@ -55,7 +59,8 @@
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    clear: both;
+    .clear {
+      clear: both;
+    }
   }
-
 }
